--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: #494545;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 .login-container {
-    background: white;
+    background: #292727;
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -40,7 +40,7 @@ body {
 input {
     width: 100%;
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 4px;
     box-sizing: border-box; /* ทำให้ padding ไม่ทำให้ input ใหญ่เกิน */
 }
@@ -48,7 +48,7 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background: #007bff;
+    background: #4a9f1f;
     color: white;
     border: none;
     border-radius: 4px;
@@ -57,7 +57,7 @@ button {
 }
 
 button:hover {
-    background: #0056b3;
+    background: #338908;
 }
 
 .error-message {
@@ -75,7 +75,7 @@ button:hover {
 .pop-up{
     width: 200px;
     position:absolute;
-    background: white;
+    background: rgb(65, 63, 63);
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
